2013-02-15  Khaled Hosny  <khaledhosny@eglug.org>

	* src/cidtype2.c: Fix loading *.dfont files on non-Mac platforms.
	* src/fontmap.c: Don't include unused ApplicationServices headers
	* configure.ac src/Makefile.am: Don't check for now unused Apple
	ApplicationServices.

2013-02-12  Khaled Hosny  <khaledhosny@eglug.org>

	* src/dpxfile.c, src/dpxfile.h (dpx_find_dfont_file): Make public.
	* src/fontmap.c (pdf_load_native_font_from_path): Fix loading *.dfont files.
	* src/fontmap.c (pdf_load_native_font): Drop use of deprecated ATS API, all
	native fonts should be given as file names.
	* src/fontmap.c (pdf_load_native_font): Show failed font name in error
	message.

2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* data/Makefile.am (configdatadir, mapdatadir, cmapdatadir):
	Change texmf => texmf-dist (sync from ../dvipdfmx).

2013-01-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/dvi.c: Avoid unused variables sbuf and slen.

2013-01-19  Khaled Hosny  <khaledhosny@eglug.org>

	 * src/dvi.c, src/dvicodes.h: Support DVI-IVD inspired text reflection
	 for XeTeX.
	 * src/vf.c: Adapt
	 * src/dvi.c: Drop code for ancient FreeType 2.2.0
	 * src/fontmap.c, src/fontmap.h: Drop no longer use FreeType version
	 variables.

2013-01-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Reduce dvipdfmx/xdvipdfmx diffs.
	* src/agl.c: Definition of hval_free() moved up.
	* src/pdffont.h: Added #ifdef XETEX ... #endif.
	* src/t1_load.c: Added #ifdef XETEX ... #else ... #endif.
	* src/dpxconf.[ch], src/dpxcrypt.[ch]: Copied from ../dvipdfmx.
	* src/sfnt.c: '#if HAVE_CONFIG_H' => '#ifdef HAVE_CONFIG_H'.

2013-01-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* read_v2_post_names() in tt_post.c: Change calculation of post->count
	for special fonts with unused index.

2013-01-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/cid.c: Avoid casts (const char *) -> (char *).

2013-01-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid various gcc-4.6 warnings.